--- a/ccatcracker/templates/base.html
+++ b/ccatcracker/templates/base.html
@@ -14,7 +14,7 @@
   <!--Lightbox-->
   <link rel="stylesheet" href="{% static 'css/lightbox.min.css' %}">
 
-  <title>BT Real Estate {% block title %}{% endblock %}</title>
+  <title>CDAC CCAT{% block title %}{% endblock %}</title>
   <body>
       <body>
        
