--- a/ccatcracker/templates/email.html
+++ b/ccatcracker/templates/email.html
@@ -1,4 +1,30 @@
+{% load static %}
 <!doctype html>
 <html>
-<h1>H</h1>
+<h3>Thank You For Choocing Ccatcracker Hope you Will enjoy this study material !!!</h3>
+      <!-- Work -->
+      <section id="work" class="bg-dark text-white text-center">
+            <h4 >We are here for you if any concern issue please email Us.</h4>
+            <h4>Lets Checkout CCAT Section</h4>
+          </section>
+    
+      <section id="about" class="py-4">
+            <img src="{% static '/img/ccat3.png' %}" class="logo" alt="Image">
+            <div class="container">
+              <div class="row">
+                <div class="col-md-8">
+                  <h2>Search For The Perfect Study Material</h2>
+                  <p class="lead">Check Out the study Material that notes are very relevent to exam nothing useless.</p>
+                 
+                  <p class="mt-4">If you click CCAT section you will get all material .That notes are created by me 
+                      I have completed CDAC 1 year ago . I saw how much peoples do struggle to get perfect notes unnecessary
+                    they wate lots of money for Pre-Dac Course . Thats why i have developed this website only for You Guys.
+                    So stay with me and start to explore I always update new Material and Important Tips for how to success in CDAC.           </p>
+                </div>
+                
+                </div>
+              </div>
+            </div>
+          </section>
+        
 </html>
