--- a/ccatcracker/templates/pages/ccat.html
+++ b/ccatcracker/templates/pages/ccat.html
@@ -73,13 +73,42 @@
             <div class="container">
               <div class="row">
                 <div class="col-md-8">
-                  <h2>Do not join any Pre-Dac Course Guys Don't waste your money. </h2>
+                  <h3>Do not join any Pre-Dac Course Guys Don't waste your money. </h3  >
                       <p class="lead">Check Out the study Material that notes are very relevent to exam nothing useless.</p>
                       
                       <p class="mt-4">If you click CCAT section you will get all material .That notes are created by me 
                           I have completed CDAC 1 year ago . I saw how much peoples do struggle to get perfect notes unnecessary
                         they waste lots of money for Pre-Dac Course . Thats why i have developed this website only for You Guys.
                         So stay with me and start to explore I always update new Material and Important Tips for how to success in CDAC.           </p>
+                    </div>
+                    </div>
+                </div>
+                
+            
+        </section>
+        <section id="about" class="py-4">
+            <div class="container">
+              <div class="row">
+                <div class="col-md-8">
+                  <h3>Do You Know ? What Pre-Dac Coacing Will provide ?. </h3>
+                      <p class="lead">Please read below instruction about predac course .</p>
+                      
+                      <p class="mt-4">
+                        1. I joined Pre-Dac Course by paying almost 12k for only 2 month in 2017. <br>
+                        2. I will not take name but I hope you guys underastand very famous Pre-Dac In Pune. <br>
+                        3. I Got rank 2300 . I am saying everything honestly because I dont want you guys also wate that huge money. <br>
+                        4. In Pre Dac first 20 days C langugae . <br>
+                        4. Next 20 days Data Structure and C++ <br>
+                        5. Only 3 days Aptitude . <br>
+                        6. 10 days OS and Networking <br>
+                        7. Thats it guys this is syllabus provided by pre dac .Nothing Extra. <br>
+                        8. I have analyzed all this problem and thats why i have developed this website only for ccat . <br>
+                        9. We are here 24*7 for any guidence you guys required just email us . <br>
+                       10. I developed study material if you follow that i will give gurantee guys without investing huge amount you will get good rank. <br>
+                       11. After completing my notes and videos  go for test series . Dont think about 600 Rs . Guys this test series i developed very similar to main ccat exam. <br>
+                       12. You will get clear idea about how quetions will come in exam . In same ccat format I developed Test series. <br>
+                       13. All the best Guys !!!! Just Stay on ccatcracker and get great success in CDAC Journey .. <br>
+                      </p>
                     </div>
                     </div>
                 </div>
