--- a/ccatcracker/ccatcracker/static/css/style.css
+++ b/ccatcracker/ccatcracker/static/css/style.css
@@ -5,7 +5,7 @@ img {
   width: 100%; }
 
 .logo {
-  width: 80px; }
+  width: 100px; }
 
 .navbar {
   opacity: 0.9;
@@ -15,7 +15,7 @@ img {
   margin-right: 0.4rem; }
 
 #showcase {
-  background: url(../img/showcase.jpg) no-repeat top center fixed/cover;
+  background: url(../img/ccee.jpg) no-repeat top center fixed/cover;
   position: relative;
   min-height: 650px;
   color: #fff;
