--- a/ccatcracker/templates/pages/about.html
+++ b/ccatcracker/templates/pages/about.html
@@ -39,23 +39,13 @@
             <div class="col-md-8">
               <h2>Search For The Perfect Study Material</h2>
               <p class="lead">Check Out the study Material that notes are very relevent to exam nothing useless.</p>
-              <img src="assets/img/about.jpg" alt="">
+             
               <p class="mt-4">If you click CCAT section you will get all material .That notes are created by me 
                   I have completed CDAC 1 year ago . I saw how much peoples do struggle to get perfect notes unnecessary
                 they wate lots of money for Pre-Dac Course . Thats why i have developed this website only for You Guys.
                 So stay with me and start to explore I always update new Material and Important Tips for how to success in CDAC.           </p>
             </div>
-            <div class="col-md-4">
-              <div class="card">
-                <img class="card-img-top" src="assets/img/realtors/kyle.jpg" alt="Seller of the month">
-                <div class="card-body">
-                  <h5 class="card-title">Seller Of The Month</h5>
-                  <h6 class="text-secondary">Kyle Brown</h6>
-                  <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis nesciunt amet, illo itaque similique repellat.
-                    content.
-                  </p>
-                </div>
-              </div>
+            
             </div>
           </div>
         </div>
@@ -63,54 +53,13 @@
     
       <!-- Work -->
       <section id="work" class="bg-dark text-white text-center">
-        <h2 class="display-4">We Work For You Guys</h2>
+        <h4 >We are here for you if any concern issue please email Us.</h4>
         <h4>Lets Checkout CCAT Section</h4>
-        <hr>
+        
         <a href="{% url 'index' %}" class="btn btn-secondary text-white btn-lg">CCAT</a>
       </section>
     
-      <!-- Team -->
-      <section id="team" class="py-5">
-        <div class="container">
-          <h2 class="text-center">Our Team</h2>
-          <div class="row text-center">
-            <div class="col-md-4">
-              <img src="assets/img/realtors/kyle.jpg" alt="" class="rounded-circle mb-3">
-              <h4>Kyle Brown</h4>
-              <p class="text-success">
-                <i class="fas fa-award text-success mb-3"></i> Realtor</p>
-              <hr>
-              <p>
-                <i class="fas fa-phone"></i> (555)-555-5555</p>
-              <p>
-                <i class="fas fa-envelope-open"></i> kyle@btrealestate.co</p>
-            </div>
-    
-            <div class="col-md-4">
-              <img src="assets/img/realtors/mark.jpg" alt="" class="rounded-circle mb-3">
-              <h4>Mark Hudson</h4>
-              <p class="text-success">Realtor</p>
-              <hr>
-              <p>
-                <i class="fas fa-phone"></i> (444)-444-4444</p>
-              <p>
-                <i class="fas fa-envelope-open"></i> mark@btrealestate.co</p>
-            </div>
-    
-            <div class="col-md-4">
-              <img src="assets/img/realtors/jenny.jpg" alt="" class="rounded-circle mb-3">
-              <h4>Jenny Johnson</h4>
-              <p class="text-success">Realtor</p>
-              <hr>
-              <p>
-                <i class="fas fa-phone"></i> (333)-333-3333</p>
-              <p>
-                <i class="fas fa-envelope-open"></i> jenny@btrealestate.co</p>
-            </div>
-          </div>
-        </div>
-      </section>
-    
+     
 
 
 
