--- a/ccatcracker/templates/partials/_topbar.html
+++ b/ccatcracker/templates/partials/_topbar.html
@@ -3,10 +3,10 @@
     <div class="container">
       <div class="row">
         <div class="col-md-4">
-          <i class="fas fa-phone"></i> +91 9096239265
+            <i class="fas fa-envelope-open"></i> abhijeets7663@gmail.com
         </div>
         <div class="col-md-4">
-          <i class="fas fa-envelope-open"></i> help@ccatcracker.com
+          <i class="fas fa-envelope-open"></i> help.ccatcracker@gmail.com
         </div>
         <div class="col-md-4">
           <div class="social text-right">
