--- a/ccatcracker/templates/partials/_footbar.html
+++ b/ccatcracker/templates/partials/_footbar.html
@@ -1,6 +1,32 @@
 
   <!-- Footer -->
+
+  
   <footer id="main-footer" class="py-4 bg-primary text-white text-center">
     Copyright &copy;
     <span class="year"></span> ccatcracker.com
+    <section id="footer">
+        <div class="container">
+          <div class="row text-center text-xs-center text-sm-left text-md-left">
+            <div class="col-xs-12 col-sm-4 col-md-4">
+              <h5>Quick links</h5>
+              <ul class="list-unstyled quick-links">
+                <li href><i class="fa fa-angle-double-right"></i>Home</a></li>
+                <li><i class="fa fa-angle-double-right"></i>About</a></li>
+                <li><i class="fa fa-angle-double-right"></i>CCAT</a></li>
+                <li><i class="fa fa-angle-double-right"></i>CDAC</a></li>
+                <li><i class="fa fa-angle-double-right"></i>Test</a></li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </section>
+       
+          
   </footer>
+
+  
+
+  <!-- Footer -->
+
+    <!-- ./Footer -->
