--- a/ccatcracker/templates/partials/_navbar.html
+++ b/ccatcracker/templates/partials/_navbar.html
@@ -59,7 +59,7 @@
 
           </li>
           <li 
-          {% if 'test' in request.path %}
+          {% if 'OnlineTest' in request.path %}
               class="nav-item active mr-3"
               {% else %}
               class="nav-item mr-3"
