--- a/ccatcracker/templates/email.html
+++ b/ccatcracker/templates/email.html
@@ -1,30 +1,96 @@
 {% load static %}
-<!doctype html>
-<html>
-<h3>Thank You For Choocing Ccatcracker Hope you Will enjoy this study material !!!</h3>
-      <!-- Work -->
-      <section id="work" class="bg-dark text-white text-center">
-            <h4 >We are here for you if any concern issue please email Us.</h4>
-            <h4>Lets Checkout CCAT Section</h4>
-          </section>
-    
-      <section id="about" class="py-4">
-            <img src="{% static '/img/ccat3.png' %}" class="logo" alt="Image">
-            <div class="container">
-              <div class="row">
-                <div class="col-md-8">
-                  <h2>Search For The Perfect Study Material</h2>
-                  <p class="lead">Check Out the study Material that notes are very relevent to exam nothing useless.</p>
-                 
-                  <p class="mt-4">If you click CCAT section you will get all material .That notes are created by me 
-                      I have completed CDAC 1 year ago . I saw how much peoples do struggle to get perfect notes unnecessary
-                    they wate lots of money for Pre-Dac Course . Thats why i have developed this website only for You Guys.
-                    So stay with me and start to explore I always update new Material and Important Tips for how to success in CDAC.           </p>
-                </div>
-                
-                </div>
-              </div>
-            </div>
-          </section>
-        
-</html>
+{% load static %}
+
+          <table style="max-width:1000px;min-width:1000px;width:1000px" width="1000" cellpadding="0" cellspacing="0" border="0">
+              <tbody>
+
+
+                  <tr>
+
+                      <td width="1000">
+                          <table style="background-color:#3be2ab;color:#fff;font-size:22px;font-weight:bold" width="1000" height="80" bgcolor="#3BE2AB" cellpadding="0" cellspacing="0" border="0">
+                              <tbody>
+                                  <tr><td colspan="5" height="15"></td></tr>
+                                  <tr>
+                                      <td width="40"></td>
+                                      <td width="130" valign="middle">
+
+                                      </td>
+                                      <td width="30"></td>
+                                      <td width="750">
+                                          <b><span style="font-family:'Segoe UI',Tahoma,Geneva,Verdana,sans-serif;font-weight:bold">!!The fastest and easiest way to Crack CCAT Exam !!</span></b>
+                                      </td>
+                                      <td width="50"></td>
+                                  </tr>
+                                  <tr><td colspan="5" height="15"></td></tr>
+                              </tbody>
+                          </table>
+                      </td>
+                  </tr>
+
+
+                  <tr>
+                      <td width="1000">
+                          <table style="background-color:#fff;color:#444;font-size:25px" width="1000" bgcolor="#fff" cellpadding="0" cellspacing="0" border="0">
+                              <tbody>
+                                  <tr><td style="border-left:1px solid #aaa;border-right:1px solid #aaa" colspan="3" height="100"></td></tr>
+                                  <tr>
+                                      <td style="border-left:1px solid #aaa" width="50"></td>
+                                      <td width="950" valign="top">
+                                          <table width="940" height="352" bgcolor="#fff" cellpadding="0" cellspacing="0" border="0">
+                                              <tbody>
+
+                                                  <tr>
+                                                      <td style="line-height:1.4;font-size:26px" align="center">
+                                                          <span lang="share_email_logo">Your Order For CCAT Notes Has Been Placed Successfully ..</span>
+                                                          <span class="m_-3814802939572611313client-name">You Will Get Notes Email Within 10 Minutes.<br>If In Case If you didnt get email Reply me Back .</span>
+                                                        </span>
+                                                      </td>
+                                                  </tr>
+                                                  <tr>
+                                                      <td align="center">
+                                                          <a class="m_-3814802939572611313download-url" style="font-size:30px;background-color:#3be2ab;padding:10px 20px;text-decoration:none;color:#fff;font-family:'Segoe UI',Tahoma,Geneva,Verdana,sans-serif;font-weight:bold" href="http://www.ccatcracker.in" target="_blank" >See the Website</a>
+                                                      </td>
+                                                  </tr>
+                                                  <tr>
+                                                      <td height="50"></td>
+                                                  </tr>
+                                              </tbody>
+                                          </table>
+                                      </td>
+                                      <td style="border-right:1px solid #aaa" width="50"></td>
+
+                                  </tr>
+                              </tbody>
+                          </table>
+                      </td>
+                  </tr>
+
+
+                  <tr>
+
+                      <td width="1000">
+                          <table style="background-color:#212121;color:#ddd;font-size:15px" width="1000" height="80" bgcolor="#212121" cellpadding="0" cellspacing="0" border="0">
+                              <tbody>
+                                  <tr><td style="border-left:1px solid #212121;border-right:1px solid #212121" height="40"></td></tr>
+                                  <tr>
+                                      <td style="text-align:center;border-left:1px solid #212121;border-right:1px solid #212121;font-family:'Segoe UI',Tahoma,Geneva,Verdana,sans-serif">
+                                          <span>Do not reply</span>
+                                          <br>
+                                          <span>©2019 ccatcracker |</span>
+                                          <br>
+                                        <a style="color:#ddd" href="http://www.ccatcracker.in">View Our Website</a>
+                                      </td>
+                                  </tr>
+                                  <tr><td height="20">
+                                  </td></tr><tr>
+                                    </tr>
+                                    <tr><td style="border-left:1px solid #212121;border-right:1px solid #212121" height="30"></td></tr>
+                                </tbody>
+                            </table>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+  
+-- INSERT --                                                          
