--- a/ccatcracker/templates/pages/ccee.html
+++ b/ccatcracker/templates/pages/ccee.html
@@ -2,10 +2,58 @@
 
 {% block content %}
 
-
-<h4>Coming Soon !!!!!!</h4>
-
-
+      <!-- Breadcrumb -->
+      <section id="bc" class="mt-3">
+        <div class="container">
+          <nav aria-label="breadcrumb">
+            <ol class="breadcrumb">
+              <li class="breadcrumb-item">
+                <a href="{% url 'index' %}">
+                  <i class="fas fa-home"></i> Home</a>
+              </li>
+              <li class="breadcrumb-item active"> About</li>
+            </ol>
+          </nav>
+        </div>
+      </section>
+    
+      <section id="about" class="py-4">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-8">
+              <h2>The Final Exam Conducted By Cdac </h2>
+              <p class="lead">Check Out the study Material We will update notes here soon.</p>
+             
+              <p class="mt-4">
+                Guys This is the exam on which your whole placement is depend . <br>
+                No matter in which college you studied whether it acts or sunbeam or any placemement is commom for all . <br>
+                It Onlu depends on what is your ccee scrore thats it . <br>
+                If your ccee scrore is above 60% Then you will get lots of calls . <br>
+                If Your Score is less than 60% call numbers in first month will be less . <br>  
+                So Main question is how to prepare for ccee exam ? <br>
+                At the end of cdac course you might heard about acts dumps acts will give dumps and all question come only through that dumps . <br>
+                This is a very very worst joke guys there is nothing like dumps its just myths.. <br>
+                
+            </p>
+             <h4>So How Can I prepare for ccee exam ?</h4>
+             <p class="mt-4">
+                Simple guys ccee is the only objective exam there is no negative marking this is plus point . <br>
+                You have 40 questions and you need to pass 16 must be correct . <br>
+                If you want your score should be above 60% then you need above 25 in each paper atleast . <br>
+                There are 1000 of questions on sandfondry but really its very difficult to read them  . <br>
+                Instead do one thing just read theory concepts very weel and slides of the teachers . <br>
+                Questions will not be too much difficult they just expect you know basics very well . <br>
+                So Read theory of each topic wise very very carefully and trust me guys that is more than enough . <br>
+                Also Whatever notes we have for ccee exam will update on this same website very soon . <br>
+                
+            </p>
+            </div>
+            
+            </div>
+          </div>
+        </div>
+      </section>
+    
 
 
 
