--- a/ccatcracker/templates/pages/cdac.html
+++ b/ccatcracker/templates/pages/cdac.html
@@ -42,7 +42,7 @@
                               <option value="DAC">DAC</option>
                               <option value="Big Data">Big Data</option>
                               <option value="IOT">IOT</option>
-                              <option value="VLSI">VLSI</option>
+                              <option value="VLSI">DITTIS</option>
                               <option value="HPCSA">HPCSA</option>
                             </select>
                         </div>
