--- a/ccatcracker/templates/pages/index.html
+++ b/ccatcracker/templates/pages/index.html
@@ -52,7 +52,15 @@
       </div>
         </div>
       </section>
-    
+      <script type="text/javascript" language="javascript">
+        var aax_size='300x250';
+        var aax_pubname = 'compute06c-21';
+        var aax_src='302';
+      </script>
+      <script type="text/javascript" language="javascript" src="http://c.amazon-adsystem.com/aax2/assoc.js"></script>
+      <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="//ws-in.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=IN&source=ac&ref=tf_til&ad_type=product_link&tracking_id=compute06c-21&marketplace=amazon&region=IN&placement=9387284492&asins=9387284492&linkId=66c94dd49dea49dc732487e383e9f23a&show_border=false&link_opens_in_new_window=false&price_color=333333&title_color=3f5b75&bg_color=ffffff">
+      </iframe>
+
       <section id="services" class="py-5 bg-secondary text-white">
           <div class="container">
             <div class="row text-center">
@@ -64,6 +72,7 @@
                   to success in cdac from start to end here you will find everything regarding CDAC.
                 </p>
               </div>
+
              
               <div class="col-md-4">
                   <i class='fas fa-laptop-code' style='font-size:48px'></i>
